--- a/index.html
+++ b/index.html
@@ -1,8 +1,17 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <head>
-  <title>if you can read this, setup worked! :D</title>
+  <title>Beranda</title>
 </head>
 <body>
+  <h1>Welcome to the website</h1>
+  <h3>it works the same as trinket, but...</h3>
+  <br><br>
+  <ol>
+    <li> doesn't prevent you from running heavy stuff </li>
+    <li> organizes your files instead of it being all on one file</li>
+    <li> more efficient than running with trinket </li>
+    <li> works as an actual website, made by you!</li>
+  </ol>
 </body>
 <html>
