--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <h1>Welcome to the website</h1>
   <h3>it works the same as trinket, but...</h3>
   <br><br>
+  <h3>I'd (nat) say github is better since it:</h3>
   <ol>
     <li> doesn't prevent you from running heavy stuff </li>
     <li> organizes your files instead of it being all on one file</li>
