Enhance index.html with meta tags and navigation

--- a/index.html
+++ b/index.html
@@ -1,9 +1,31 @@
 <!DOCTYPE html>
-<meta charset="utf-8">
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Beranda</title>
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/animation.css">
+  <script src="js/script.js" defer></script>
 </head>
 <body>
+<header>
+  <nav><img src ="logo.png" alt="Logo" class="logo">
+    <div class="navtext">
+      <h2>PT Monyet Terbang</h2>
+      <h4>Armada Pelayaran Tepeng</h4>
+    </div></nav>
+  <nav>
+    <a href="index.html">Beranda</a>
+    <a href="html/layanan.html">Layanan</a>
+    <a href="html/galeri.html">Galeri</a>
+    <a href="html/infojadwal.html">Informasi Jadwal</a>
+    <a href="html/tiket.html">Pemesanan Tiket</a>
+    <a href="html/kontak.html">Hubungi Kami</a>
+  </nav>
+</header>
+<content>
+<img src="banner.png" alt="banner" class="banner">
   <h1>Welcome to the website</h1>
   <h3>it works the same as trinket, but...</h3>
   <br><br>
@@ -14,5 +36,9 @@
     <li> more efficient than running with trinket </li>
     <li> works as an actual website, made by you!</li>
   </ol>
+</content>
+<footer>
+  <p>© 2024 PT Monyet Terbang. All rights reserved.</p>
+</footer>
 </body>
 <html>
