Add banner and logo images; update HTML structure and styles

--- a/index.html
+++ b/index.html
@@ -24,11 +24,28 @@
     <a href="html/kontak.html">Hubungi Kami</a>
   </nav>
 </header>
-<content>
-<img src="banner.png" alt="banner" class="banner">
+<main>
+<div class="banner"><h1>Beranda</h1></div>
+<section>
+  <div class="desc">
+    <h1>PT MONYET TERBANG</h1>
+    <h3>PT. Monyet Terbang didirikan untuk memenuhi kebutuhan konektivitas laut yang lebih cepat dan efisien di wilayah tengah Indonesia, terutama untuk penumpang dan logistik. Banyak rute antar-pulau penting belum terlayani dengan baik, sehingga dibutuhkan solusi pelayaran yang gesit dan dapat diandalkan. Karena itulah perusahaan ini hadir sebagai jembatan mobilitas dan distribusi barang yang lebih modern. </h3>
+    <h3>Komitmen kami,</h3>
+    <img src="logo.png" alt="Logo" class="logo">
+  </div>
+  <div class="collage">
+    <img src="banner.jpg" style="margin-right:120px;">
+    <img src="banner.jpg" style="margin-left:120px;">
+    <img src="banner.jpg" style="margin-right:120px;">
+  </div>
+</section>
+
+
+
+<div style="background-color: #aaa3a3;padding: 20px 20px 20px 20px;">
   <h1>Welcome to the website</h1>
   <h3>it works the same as trinket, but...</h3>
-  <br><br>
+  <br>
   <h3>I'd (nat) say github is better since it:</h3>
   <ol>
     <li> doesn't prevent you from running heavy stuff </li>
@@ -36,9 +53,11 @@
     <li> more efficient than running with trinket </li>
     <li> works as an actual website, made by you!</li>
   </ol>
-</content>
+</div>
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+</main>
 <footer>
-  <p>© 2025 PT Monyet Terbang. All rights reserved.</p>
+  <p>© 2025 PT Monyet Terbang. All rights reserved.</p><p>alexgaming?</p>
 </footer>
 </body>
-<html>
+</html>
