--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <header>
-  <nav><img src ="logo.png" alt="Logo" class="logo">
+  <nav><img src ="assets/logo.png" alt="Logo" class="logo">
     <div class="navtext">
       <h2>PT Monyet Terbang</h2>
       <h4>Armada Pelayaran Tepeng</h4>
@@ -31,15 +31,35 @@
     <h1>PT MONYET TERBANG</h1>
     <h3>PT. Monyet Terbang didirikan untuk memenuhi kebutuhan konektivitas laut yang lebih cepat dan efisien di wilayah tengah Indonesia, terutama untuk penumpang dan logistik. Banyak rute antar-pulau penting belum terlayani dengan baik, sehingga dibutuhkan solusi pelayaran yang gesit dan dapat diandalkan. Karena itulah perusahaan ini hadir sebagai jembatan mobilitas dan distribusi barang yang lebih modern. </h3>
     <h3>Komitmen kami,</h3>
-    <img src="logo.png" alt="Logo" class="logo">
+    <img src="assets/logo.png" alt="Logo" class="logo">
   </div>
   <div class="collage">
-    <img src="banner.jpg" style="margin-right:120px;">
-    <img src="banner.jpg" style="margin-left:120px;">
-    <img src="banner.jpg" style="margin-right:120px;">
+    <img src="assets/banner.jpg" style="margin-right:120px;">
+    <img src="assets/banner.jpg" style="margin-left:120px;">
+    <img src="assets/banner.jpg" style="margin-right:120px;">
   </div>
 </section>
-
+<section class="founder">
+<h1>Our Founders</h1>
+  <div>
+    <div class="founderbox">
+      <img src="assets/stephen.png">
+      <h2>Stephen wisno</h2>
+    </div>
+    <div class="founderbox">
+      <img src="assets/nathan.png">
+      <h2>Nathanael Jay</h2>
+    </div>
+    <div class="founderbox">
+      <img src="assets/kevin.png">
+      <h2>Kevin Sebastian</h2>
+    </div>
+    <div class="founderbox">
+      <img src="assets/alex.png">
+      <h2>Christian Alexander</h2>
+    </div>
+  </div>
+</section>
 
 
 <div style="background-color: #aaa3a3;padding: 20px 20px 20px 20px;">
