--- a/index.html
+++ b/index.html
@@ -44,19 +44,19 @@
   <div>
     <div class="founderbox">
       <img src="assets/stephen.png">
-      <h2>Stephen wisno</h2>
+      <h2>Stephen Wisno</h2>
     </div>
     <div class="founderbox">
       <img src="assets/nathan.png">
-      <h2>Nathanael Jay</h2>
+      <h2>Nathanael Jay Wijaya</h2>
     </div>
     <div class="founderbox">
       <img src="assets/kevin.png">
-      <h2>Kevin Sebastian</h2>
+      <h2>Kevin Sebastian Viand Astono</h2>
     </div>
     <div class="founderbox">
       <img src="assets/alex.png">
-      <h2>Christian Alexander</h2>
+      <h2>Christian Alexander Kasenda</h2>
     </div>
   </div>
 </section>
