--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 </section>
 <section class="founder">
 <h1>Our Founders</h1>
-  <div>
+  <div class="founderlist">
     <div class="founderbox">
       <img src="assets/stephen.png">
       <h2>Stephen Wisno</h2>
