everything for homepage except for images & footer

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <h2>PT Monyet Terbang</h2>
       <h4>Armada Pelayaran Tepeng</h4>
     </div></nav>
-  <nav>
+  <nav style="margin-right:30px;">
     <a href="index.html">Beranda</a>
     <a href="html/layanan.html">Layanan</a>
     <a href="html/galeri.html">Galeri</a>
@@ -34,9 +34,9 @@
     <img src="assets/logo.png" alt="Logo" class="logo">
   </div>
   <div class="collage">
-    <img src="assets/banner.jpg" style="margin-right:120px;">
-    <img src="assets/banner.jpg" style="margin-left:120px;">
-    <img src="assets/banner.jpg" style="margin-right:120px;">
+    <img src="assets/banner.jpg">
+    <img src="assets/banner.jpg" style="margin-left:170px;">
+    <img src="assets/banner.jpg">
   </div>
 </section>
 <section class="founder">
@@ -60,21 +60,29 @@
     </div>
   </div>
 </section>
-
-
-<div style="background-color: #aaa3a3;padding: 20px 20px 20px 20px;">
-  <h1>Welcome to the website</h1>
-  <h3>it works the same as trinket, but...</h3>
-  <br>
-  <h3>I'd (nat) say github is better since it:</h3>
-  <ol>
-    <li> doesn't prevent you from running heavy stuff </li>
-    <li> organizes your files instead of it being all on one file</li>
-    <li> more efficient than running with trinket </li>
-    <li> works as an actual website, made by you!</li>
-  </ol>
-</div>
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<section class="timeline">
+  <h1>Sejarah Perusahaan</h1>
+  <div class="timeline_line">
+    <div class="step">
+      <div class="point" data-step="1"></div>
+      <h3>Januari</h3></div>
+    <div class="step">
+      <div class="point" data-step="2"></div>
+      <h3>Maret</h3></div>
+    <div class="step">
+      <div class="point" data-step="3"></div>
+      <h3>September</h3></div>
+    <div class="step">
+      <div class="point" data-step="4"></div>
+      <h3>Oktober</h3></div>
+  </div>
+  <div class="desc">
+    <div class="timeline_box">
+    <div class="timeline_title" id="title">Perusahaan Berdiri</div>
+    <div class="timeline_desc" id="desc">PT. Monyet Terbang didirikan pada 1 Januari 2025 oleh tim yang ingin menghadirkan pelayaran cepat dan efisien di wilayah tengah Indonesia. Ide ini muncul karena kurangnya konektivitas laut yang praktis dan nyaman antara Jawa Tengah, Kalimantan, Sulawesi, NTB, dan Bali. Dari sinilah konsep layanan “Monkey-Fast” mulai dibentuk sebagai dasar operasional perusahaan.</div>
+  </div>
+  </div>
+</section>
 </main>
 <footer>
   <p>© 2025 PT Monyet Terbang. All rights reserved.</p><p>alexgaming?</p>
