Replace single image with a div containing images

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   </div>
   <div class="collage">
     <img src="assets/banner.jpg">
-    <img src="assets/banner.jpg" style="margin-left:170px;">
+    <div  style="margin-left:170px;"><img src="assets/banner.jpg"><img src="assets/banner.jpg"></div>
     <img src="assets/banner.jpg">
   </div>
 </section>
