--- a/index.html
+++ b/index.html
@@ -85,7 +85,12 @@
 </section>
 </main>
 <footer>
-  <p>© 2025 PT Monyet Terbang. All rights reserved.</p><p>alexgaming?</p>
+  <div class=kontak>
+  <h3>Hubungi kami di:</h3>
+    <div><img src="whatsapp.png">081181945</div>
+    <div><img src="instagram.png">@PTmonyet_terbang</div>
+  </div>
+  <p>© 2025 PT Monyet Terbang. All rights reserved.</p>
 </footer>
 </body>
 </html>
