Add instruction header to timeline section

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
 </section>
 <section class="timeline">
   <h1>Sejarah Perusahaan</h1>
+  <h4>Click the buttons below!</h4>
   <div class="timeline_line">
     <div class="step">
       <div class="point" data-step="1"></div>
