incomplete layanan, index fixed

--- a/html/layanan.html
+++ b/html/layanan.html
@@ -4,23 +4,39 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Beranda</title>
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/animation.css">
+  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="../css/animation.css">
   <script src="js/script.js" defer></script>
 </head>
 <body>
 <header>
-  <nav><img src ="assets/logo.png" alt="Logo" class="logo">
+  <nav><img src ="../assets/logo.png" alt="Logo" class="logo">
     <div class="navtext">
       <h2>PT Monyet Terbang</h2>
       <h4>Armada Pelayaran Tepeng</h4>
     </div></nav>
   <nav>
-    <a href="index.html">Beranda</a>
-    <a href="html/layanan.html">Layanan</a>
-    <a href="html/galeri.html">Galeri</a>
-    <a href="html/infojadwal.html">Informasi Jadwal</a>
-    <a href="html/tiket.html">Pemesanan Tiket</a>
-    <a href="html/kontak.html">Hubungi Kami</a>
+    <a href="../index.html">Beranda</a>
+    <a href="layanan.html">Layanan</a>
+    <a href="galeri.html">Galeri</a>
+    <a href="infojadwal.html">Informasi Jadwal</a>
+    <a href="tiket.html">Pemesanan Tiket</a>
+    <a href="#footer">Hubungi Kami</a>
   </nav>
 </header>
+<main>
+<div class="banner"><h1>Layanan</h1></div>
+<section class="layanan">
+  
+
+</main>
+<footer id="footer">
+  <div class=kontak>
+  <h3>Hubungi kami di:</h3>
+    <div class="footertext"><img src="whatsapp.png">081181945</div>
+    <div class="footertext"><img src="instagram.png">@PTmonyet_terbang</div>
+  </div>
+  <p>© 2025 PT Monyet Terbang. All rights reserved.</p>
+</footer>
+</body>
+</html>
