--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
       <h2>PT Monyet Terbang</h2>
       <h4>Armada Pelayaran Tepeng</h4>
     </div></nav>
-  <nav style="margin-right:30px;">
+  <nav>
     <a href="index.html">Beranda</a>
     <a href="html/layanan.html">Layanan</a>
     <a href="html/galeri.html">Galeri</a>
     <a href="html/infojadwal.html">Informasi Jadwal</a>
     <a href="html/tiket.html">Pemesanan Tiket</a>
-    <a href="html/kontak.html">Hubungi Kami</a>
+    <a href="#footer">Hubungi Kami</a>
   </nav>
 </header>
 <main>
@@ -34,9 +34,9 @@
     <img src="assets/logo.png" alt="Logo" class="logo">
   </div>
   <div class="collage">
-    <img src="assets/banner.jpg" style="margin-left:310px;">
-    <div  style="margin-left:170px;"><img src="assets/banner.jpg"><img src="assets/banner.jpg"></div>
-    <img src="assets/banner.jpg" style="margin-left:310px;">
+    <img src="assets/banner.jpg" style="margin-left:135px;">
+    <div  style="margin-left:10px;"><img src="assets/banner.jpg"><img src="assets/banner.jpg"></div>
+    <img src="assets/banner.jpg" style="margin-left:135px;">
   </div>
 </section>
 <section class="founder">
@@ -85,11 +85,11 @@
   </div>
 </section>
 </main>
-<footer>
+<footer id="footer">
   <div class=kontak>
   <h3>Hubungi kami di:</h3>
-    <div><img src="whatsapp.png">081181945</div>
-    <div><img src="instagram.png">@PTmonyet_terbang</div>
+    <div class="footertext"><img src="whatsapp.png">081181945</div>
+    <div class="footertext"><img src="instagram.png">@PTmonyet_terbang</div>
   </div>
   <p>© 2025 PT Monyet Terbang. All rights reserved.</p>
 </footer>
