--- a/html/layanan.html
+++ b/html/layanan.html
@@ -27,14 +27,27 @@
 <main>
 <div class="banner"><h1>Layanan</h1></div>
 <section class="layanan">
-  
-
+  <h1>Jenis Layanan</h1>
+  <div class="founderlist">
+  <div class="founderbox">
+    <img src="../assets/banner.png">
+    <h2 style="color:black;">Test 1</h2>
+  </div>
+    <div class="founderbox">
+    <img src="../assets/banner.png">
+    <h2 style="color:black;">Test 1</h2>
+  </div>
+    <div class="founderbox">
+    <img src="../assets/banner.png">
+    <h2 style="color:black;">Test 1</h2>
+  </div>
+  </div>
 </main>
 <footer id="footer">
   <div class=kontak>
   <h3>Hubungi kami di:</h3>
-    <div class="footertext"><img src="whatsapp.png">081181945</div>
-    <div class="footertext"><img src="instagram.png">@PTmonyet_terbang</div>
+    <div class="footertext"><img src="../assets/whatsapp.png">081181945</div>
+    <div class="footertext"><img src="../assets/instagram.png">@PTmonyet_terbang</div>
   </div>
   <p>© 2025 PT Monyet Terbang. All rights reserved.</p>
 </footer>
