--- a/html/layanan.html
+++ b/html/layanan.html
@@ -30,15 +30,15 @@
   <h1>Jenis Layanan</h1>
   <div class="founderlist">
   <div class="founderbox">
-    <img src="../assets/banner.png">
+    <img src="../assets/banner.png" style="height:200px;">
     <h2 style="color:black;">Test 1</h2>
   </div>
     <div class="founderbox">
-    <img src="../assets/banner.png">
+    <img src="../assets/banner.png" style="height:200px;">
     <h2 style="color:black;">Test 1</h2>
   </div>
     <div class="founderbox">
-    <img src="../assets/banner.png">
+    <img src="../assets/banner.png" style="height:200px;">
     <h2 style="color:black;">Test 1</h2>
   </div>
   </div>
