--- a/index.html
+++ b/index.html
@@ -84,6 +84,43 @@
   </div>
   </div>
 </section>
+<section class="visi">
+  <img src="">
+  <div>
+    <h1>Visi PT Monyet Terbang</h1>
+    <h3>Menjadi perusahaan pelayaran terdepan di bagian Tengah Indonesia (Jawa Tengah, Kalimantan, Sulawesi, NTB, dan Bali) yang dikenal karena layanan yang gesit, pengalaman perjalanan yang menyenangkan, dan kontribusi nyata dalam memajukan konektivitas antar wilayah.</h3>
+  </div>
+</section>
+<section class="visi">
+  <h1>Misi PT. Monyet Terbang</h1>
+  <ol>
+    <li>Kecepatan dan Keandalan Logistik</li>
+    <h3>Menyediakan layanan kargo yang sangat efisien dan terencana, menjamin barang kiriman tiba tepat waktu, aman, dan meminimalkan keterlambatan.</h3>
+    <li>Pengalaman Penumpang Unik</li>
+    <h3>Menciptakan pengalaman pelayaran yang tidak membosankan dan nyaman, aman, seru, menyenangkan (anti pusing), serta mengutamakan keselamatan dan keramahan bagi setiap penumpang.</h3>
+    <li>Pengembangan Jaringan</li>
+    <h3>Terus memperluas dan mengoptimalkan rute pelayaran antar-pulau (Jawa Tengah, Kalimantan, Sulawesi, NTB, Bali) untuk mendukung distribusi barang dan pergerakan masyarakat.</h3>
+    <li>Inovasi dan Efisiensi</li>
+    <h3>Mengadopsi teknologi pelayaran dan logistik terkini untuk meningkatkan efisiensi operasional dan mengurangi dampak lingkungan.</h3>
+    <li>Penggerak Ekonomi Regional</li>
+    <h3>Berperan aktif sebagai jembatan ekonomi yang menyeimbangkan perdagangan, membantu komoditas lokal dari timur menjangkau pasar di barat, dan sebaliknya.</h3>
+  </ol>
+</section>
+  <section class="visi">
+    <h1>Tujuan PT.Monyet Terbang</h1>
+    <div class="founderlist">
+    <div class="founderbox"><img src="">
+      <h2>Jaringan & Konektivitas</h2>
+      <h3>Menjadi operator pelayaran pilihan yang paling diandalkan dalam menciptakan koneksi tanpa hambatan antara Jawa Tengah, Kalimantan, Sulawesi, NTB, dan Bali, sehingga pergerakan masyarakat dan distribusi barang esensial berlangsung lancar dan cepat.</h3></div>
+      <div class="founderbox"><img src="">
+      <h2>Pelayanan & Pengalaman</h2>
+      <h3>Menyediakan fasilitas dan layanan di atas kapal yang dirancang khusus untuk memastikan penumpang merasa santai, nyaman, dan terhibur selama perjalanan jarak jauh, menghilangkan stigma perjalanan laut yang melelahkan.</h3></div>
+      <div class="founderbox"><img src="">
+      <h2>Dampak Sosial & Budaya</h2>
+      <h3>Menyediakan ruang dan waktu di kapal untuk mempromosikan dan menampilkan seni, kuliner, dan budaya lokal dari lima wilayah yang dilalui (Jawa, Kalimantan, Sulawesi, NTB, Bali) sebagai bagian dari pengalaman perjalanan.</h3></div>
+    </div>
+  </section>
+  <br><br>
 </main>
 <footer id="footer">
   <div class=kontak>
