--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     <h3>Berperan aktif sebagai jembatan ekonomi yang menyeimbangkan perdagangan, membantu komoditas lokal dari timur menjangkau pasar di barat, dan sebaliknya.</h3>
   </ol>
 </section>
-  <section class="visi">
+  <section class="visi" style="flex-direction:column;">
     <h1>Tujuan PT.Monyet Terbang</h1>
     <div class="founderlist">
     <div class="founderbox"><img src="">
