--- a/html/tiket.html
+++ b/html/tiket.html
@@ -27,6 +27,120 @@
 <main>
 <div class="banner"><h1>Beranda</h1></div>
 <br><br><br><br>
+  <h2>PEMESANAN TIKET PT. MONYET TERBANG</h2>
+
+<div class="container">
+
+    <!-- KIRI -->
+    <div class="box">
+        <h3>Registrasi Pengguna MT Ferry</h3>
+
+        <label>Email</label>
+        <input type="email">
+
+        <label>Nomor Identitas (KTP/SIM/Passport)</label>
+        <input type="text">
+
+        <label>Nama Lengkap</label>
+        <input type="text">
+
+        <div class="radio-group">
+            <label><input type="radio" name="jk"> Laki - Laki</label>
+            <label><input type="radio" name="jk"> Perempuan</label>
+        </div>
+
+        <label>Alamat</label>
+        <input type="text">
+
+        <label>Kota/Kab.</label>
+        <input type="text">
+
+        <label>HP</label>
+        <input type="number">
+
+        <label>Password</label>
+        <input type="password">
+
+        <label>Konfirmasi Password</label>
+        <input type="password">
+
+        <label>Alat Pembayaran</label>
+        <select>
+            <option>Pilih Metode</option>
+            <option>Transfer Bank</option>
+            <option>E-Wallet</option>
+            <option>Kartu Kredit</option>
+        </select>
+
+        <div class="harga">
+            <p>Semua Kapal Pesiar PT. Monyet Terbang</p>
+            <p>Economy : Rp.15,000,000,00 (Dewasa)</p>
+            <p>Business : Rp.25,000,000,00 (Dewasa)</p>
+            <p>First Class : Rp.50,000,000,00 (Dewasa)</p>
+        </div>
+    </div>
+
+    <!-- KANAN -->
+    <div class="box">
+        <h3>Pesan Tiket Kapal</h3>
+
+        <label>Jenis Tiket</label>
+        <select>
+            <option>Pilih Jenis</option>
+            <option>Economy</option>
+            <option>Business</option>
+            <option>First Class</option>
+        </select>
+
+        <label>Pelabuhan Asal</label>
+        <select>
+            <option>Pilih Pelabuhan</option>
+            <option>Jakarta</option>
+            <option>Surabaya</option>
+            <option>Bali</option>
+        </select>
+
+        <label>Pelabuhan Tujuan</label>
+        <select>
+            <option>Pilih Tujuan</option>
+            <option>Makassar</option>
+            <option>Lombok</option>
+            <option>Batam</option>
+        </select>
+
+        <label>Balita / Dewasa</label>
+        <select>
+            <option>Dewasa</option>
+            <option>Balita</option>
+        </select>
+
+        <label>Berhenti Pelabuhan #1</label>
+        <input type="text" placeholder="#ISI OTOMATIS">
+
+        <label>Berhenti Pelabuhan #2</label>
+        <input type="text" placeholder="#ISI OTOMATIS">
+
+        <div class="img-box"></div>
+
+        <label>Transfer</label>
+        <select>
+            <option>Pilih Bank</option>
+            <option>BCA</option>
+            <option>Mandaliri</option>
+            <option>BRI</option>
+        </select>
+
+        <div class="harga">
+            <p>Semua Kapal Pesiar PT. Monyet Terbang</p>
+            <p>Economy : Rp.10,000,000,00 (Anak &lt; 10)</p>
+            <p>Business : Rp.15,000,000,00 (Anak &lt; 10)</p>
+            <p>First Class : Rp.30,000,000,00 (Anak &lt; 10)</p>
+        </div>
+    </div>
+
+</div>
+
+<button class="submit-btn">PESAN SEKARANG</button>
 </main>
 <footer id="footer">
   <div class=kontak>
