--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   </div>
 </section>
 <section class="founder">
-<h1>Koruptor-koruptor kami</h1>
+<h1>Our Founders</h1>
   <div class="founderlist">
     <div class="founderbox">
       <img src="assets/stephen.png">
