--- a/html/tiket.html
+++ b/html/tiket.html
@@ -3,23 +3,21 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pemesanan Tiket PT Monyet Terbang</title>
+  <title>Beranda</title>
 
-  <!-- CSS UTAMA -->
-  <link rel="stylesheet" href="css/style.css">
-
-  <!-- CSS FORM TIKET -->
-  <link rel="stylesheet" href="css/tiket.css">
+  <!-- CSS -->
+  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="../css/animation.css">
 
   <!-- JS -->
-  <script src="js/tiket.js" defer></script>
+  <script src="js/script.js" defer></script>
 </head>
 
 <body>
 
 <header>
   <nav>
-    <img src="assets/logo.png" alt="Logo" class="logo">
+    <img src="../assets/logo.png" alt="Logo" class="logo">
     <div class="navtext">
       <h2>PT Monyet Terbang</h2>
       <h4>Armada Pelayaran Tepeng</h4>
@@ -27,7 +25,7 @@
   </nav>
 
   <nav>
-    <a href="index.html">Beranda</a>
+    <a href="../index.html">Beranda</a>
     <a href="layanan.html">Layanan</a>
     <a href="galeri.html">Galeri</a>
     <a href="infojadwal.html">Informasi Jadwal</a>
@@ -36,24 +34,27 @@
   </nav>
 </header>
 
+
 <main>
 
   <div class="banner">
-    <h1>Pemesanan Tiket</h1>
+    <h1>Beranda</h1>
   </div>
 
-  <h1 class="judul">PEMESANAN TIKET PT. MONYET TERBANG</h1>
+  <br><br><br><br>
 
-  <div class="form-container">
+  <h2>PEMESANAN TIKET PT. MONYET TERBANG</h2>
+
+  <div class="container">
 
     <!-- FORM KIRI -->
     <div class="box">
-      <h2>Registrasi Pengguna MT Ferry</h2>
+      <h3>Registrasi Pengguna MT Ferry</h3>
 
       <label>Email</label>
       <input type="email">
 
-      <label>Nomor Identitas</label>
+      <label>Nomor Identitas (KTP/SIM/Passport)</label>
       <input type="text">
 
       <label>Nama Lengkap</label>
@@ -89,45 +90,67 @@
 
       <div class="harga">
         <p><b>Semua Kapal Pesiar PT. Monyet Terbang</b></p>
-        <p>Economy : Rp.15.000.000 (Dewasa)</p>
-        <p>Business : Rp.25.000.000 (Dewasa)</p>
-        <p>First Class : Rp.50.000.000 (Dewasa)</p>
+        <p>Economy : Rp.15,000,000,00 (Dewasa)</p>
+        <p>Business : Rp.25,000,000,00 (Dewasa)</p>
+        <p>First Class : Rp.50,000,000,00 (Dewasa)</p>
       </div>
     </div>
 
     <!-- FORM KANAN -->
     <div class="box">
-      <h2>Pesan Tiket Kapal</h2>
+      <h3>Pesan Tiket Kapal</h3>
 
       <label>Jenis Tiket</label>
-      <select id="jenisTiket">
-        <option value="">Pilih Jenis</option>
-        <option value="penumpang">Penumpang</option>
-        <option value="kargo">Kargo</option>
+      <select>
+        <option>Pilih Jenis</option>
+        <option>Economy</option>
+        <option>Business</option>
+        <option>First Class</option>
       </select>
 
-      <label>Pilih Kapal</label>
-      <select id="kapal">
-        <option value="">-- Pilih Jenis Tiket Dulu --</option>
+      <label>Pelabuhan Asal</label>
+      <select>
+        <option>Pilih Pelabuhan</option>
+        <option>Jakarta</option>
+        <option>Surabaya</option>
+        <option>Bali</option>
       </select>
 
-      <label>Pelabuhan Awal</label>
-      <input type="text" id="asal" readonly>
+      <label>Pelabuhan Tujuan</label>
+      <select>
+        <option>Pilih Tujuan</option>
+        <option>Makassar</option>
+        <option>Lombok</option>
+        <option>Batam</option>
+      </select>
 
-      <label>Pelabuhan Berhenti #1</label>
-      <input type="text" id="stop1" readonly>
+      <label>Balita / Dewasa</label>
+      <select>
+        <option>Dewasa</option>
+        <option>Balita</option>
+      </select>
 
-      <label>Pelabuhan Berhenti #2</label>
-      <input type="text" id="stop2" readonly>
+      <label>Berhenti Pelabuhan #1</label>
+      <input type="text" placeholder="#ISI OTOMATIS">
 
-      <label>Pelabuhan Akhir</label>
-      <input type="text" id="tujuan" readonly>
+      <label>Berhenti Pelabuhan #2</label>
+      <input type="text" placeholder="#ISI OTOMATIS">
+
+      <div class="img-box"></div>
+
+      <label>Transfer</label>
+      <select>
+        <option>Pilih Bank</option>
+        <option>BCA</option>
+        <option>Mandaliri</option>
+        <option>BRI</option>
+      </select>
 
       <div class="harga">
-        <p><b>Harga Tiket Anak (&lt;10)</b></p>
-        <p>Economy : Rp.10.000.000</p>
-        <p>Business : Rp.15.000.000</p>
-        <p>First Class : Rp.30.000.000</p>
+        <p><b>Semua Kapal Pesiar PT. Monyet Terbang</b></p>
+        <p>Economy : Rp.10,000,000,00 (Anak &lt; 10)</p>
+        <p>Business : Rp.15,000,000,00 (Anak &lt; 10)</p>
+        <p>First Class : Rp.30,000,000,00 (Anak &lt; 10)</p>
       </div>
     </div>
 
@@ -141,8 +164,14 @@
 <footer id="footer">
   <div class="kontak">
     <h3>Hubungi kami di:</h3>
-    <div class="footertext"><img src="whatsapp.png">081181945</div>
-    <div class="footertext"><img src="instagram.png">@PTmonyet_terbang</div>
+
+    <div class="footertext">
+      <img src="whatsapp.png">081181945
+    </div>
+
+    <div class="footertext">
+      <img src="instagram.png">@PTmonyet_terbang
+    </div>
   </div>
 
   <p>© 2025 PT Monyet Terbang. All rights reserved.</p>
