--- a/html/tiket.html
+++ b/html/tiket.html
@@ -4,26 +4,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Beranda</title>
-
-  <!-- CSS -->
   <link rel="stylesheet" href="../css/style.css">
   <link rel="stylesheet" href="../css/animation.css">
-
-  <!-- JS -->
   <script src="js/script.js" defer></script>
 </head>
-
 <body>
-
 <header>
-  <nav>
-    <img src="../assets/logo.png" alt="Logo" class="logo">
+  <nav><img src ="../assets/logo.png" alt="Logo" class="logo">
     <div class="navtext">
       <h2>PT Monyet Terbang</h2>
       <h4>Armada Pelayaran Tepeng</h4>
-    </div>
-  </nav>
-
+    </div></nav>
   <nav>
     <a href="../index.html">Beranda</a>
     <a href="layanan.html">Layanan</a>
@@ -33,149 +24,17 @@
     <a href="#footer">Hubungi Kami</a>
   </nav>
 </header>
-
-
 <main>
-
-  <div class="banner">
-    <h1>Beranda</h1>
-  </div>
-
-  <br><br><br><br>
-
-  <h2>PEMESANAN TIKET PT. MONYET TERBANG</h2>
-
-  <div class="container">
-
-    <!-- FORM KIRI -->
-    <div class="box">
-      <h3>Registrasi Pengguna MT Ferry</h3>
-
-      <label>Email</label>
-      <input type="email">
-
-      <label>Nomor Identitas (KTP/SIM/Passport)</label>
-      <input type="text">
-
-      <label>Nama Lengkap</label>
-      <input type="text">
-
-      <div class="radio-group">
-        <label><input type="radio" name="jk"> Laki - Laki</label>
-        <label><input type="radio" name="jk"> Perempuan</label>
-      </div>
-
-      <label>Alamat</label>
-      <input type="text">
-
-      <label>Kota/Kab.</label>
-      <input type="text">
-
-      <label>HP</label>
-      <input type="number">
-
-      <label>Password</label>
-      <input type="password">
-
-      <label>Konfirmasi Password</label>
-      <input type="password">
-
-      <label>Alat Pembayaran</label>
-      <select>
-        <option>Pilih Metode</option>
-        <option>Transfer Bank</option>
-        <option>E-Wallet</option>
-        <option>Kartu Kredit</option>
-      </select>
-
-      <div class="harga">
-        <p><b>Semua Kapal Pesiar PT. Monyet Terbang</b></p>
-        <p>Economy : Rp.15,000,000,00 (Dewasa)</p>
-        <p>Business : Rp.25,000,000,00 (Dewasa)</p>
-        <p>First Class : Rp.50,000,000,00 (Dewasa)</p>
-      </div>
-    </div>
-
-    <!-- FORM KANAN -->
-    <div class="box">
-      <h3>Pesan Tiket Kapal</h3>
-
-      <label>Jenis Tiket</label>
-      <select>
-        <option>Pilih Jenis</option>
-        <option>Economy</option>
-        <option>Business</option>
-        <option>First Class</option>
-      </select>
-
-      <label>Pelabuhan Asal</label>
-      <select>
-        <option>Pilih Pelabuhan</option>
-        <option>Jakarta</option>
-        <option>Surabaya</option>
-        <option>Bali</option>
-      </select>
-
-      <label>Pelabuhan Tujuan</label>
-      <select>
-        <option>Pilih Tujuan</option>
-        <option>Makassar</option>
-        <option>Lombok</option>
-        <option>Batam</option>
-      </select>
-
-      <label>Balita / Dewasa</label>
-      <select>
-        <option>Dewasa</option>
-        <option>Balita</option>
-      </select>
-
-      <label>Berhenti Pelabuhan #1</label>
-      <input type="text" placeholder="#ISI OTOMATIS">
-
-      <label>Berhenti Pelabuhan #2</label>
-      <input type="text" placeholder="#ISI OTOMATIS">
-
-      <div class="img-box"></div>
-
-      <label>Transfer</label>
-      <select>
-        <option>Pilih Bank</option>
-        <option>BCA</option>
-        <option>Mandaliri</option>
-        <option>BRI</option>
-      </select>
-
-      <div class="harga">
-        <p><b>Semua Kapal Pesiar PT. Monyet Terbang</b></p>
-        <p>Economy : Rp.10,000,000,00 (Anak &lt; 10)</p>
-        <p>Business : Rp.15,000,000,00 (Anak &lt; 10)</p>
-        <p>First Class : Rp.30,000,000,00 (Anak &lt; 10)</p>
-      </div>
-    </div>
-
-  </div>
-
-  <button class="submit-btn">PESAN SEKARANG</button>
-
+<div class="banner"><h1>Beranda</h1></div>
+<br><br><br><br>
 </main>
-
-
 <footer id="footer">
-  <div class="kontak">
-    <h3>Hubungi kami di:</h3>
-
-    <div class="footertext">
-      <img src="whatsapp.png">081181945
-    </div>
-
-    <div class="footertext">
-      <img src="instagram.png">@PTmonyet_terbang
-    </div>
+  <div class=kontak>
+  <h3>Hubungi kami di:</h3>
+    <div class="footertext"><img src="whatsapp.png">081181945</div>
+    <div class="footertext"><img src="instagram.png">@PTmonyet_terbang</div>
   </div>
-
   <p>© 2025 PT Monyet Terbang. All rights reserved.</p>
 </footer>
-
 </body>
 </html>
