--- a/html/layanan.html
+++ b/html/layanan.html
@@ -30,17 +30,17 @@
   <h1>Jenis Layanan</h1>
   <div class="founderlist">
   <div class="founderbox">
-    <img src="../assets/banner.png" style="height:200px;width:350px;">
+    <img src="../assets/banner.jpg" style="height:200px;width:350px;">
     <h2 style="color:black;">Angkutan Laut</h2>
     <h3>Ruang lingkup usaha Flying Monkey Shipping mencakup penyediaan layanan transportasi maritim Kargo (logistik antar-pulau) dan Penumpang (pelayaran reguler dan pesiar) yang berfokus pada peningkatan efisiensi, akurasi, dan kenyamanan di koridor regional Indonesia Tengah.</h3>
   </div>
     <div class="founderbox">
-    <img src="../assets/banner.png" style="height:200px;width:350px;">
+    <img src="../assets/banner.jpg" style="height:200px;width:350px;">
     <h2 style="color:black;">Kapal Pesiar</h2>
       <h3>Penyediaan layanan transportasi dan rekreasi mewah (pariwisata bahari) dengan fokus pada pengalaman, kenyamanan, hiburan, dan penjelajahan destinasi-destinasi unggulan seperti Bali, Lombok (NTB), dan Semarang, melayani penumpang dalam kelas Ekonomi, Bisnis, dan First Class.</h3>
   </div>
     <div class="founderbox">
-    <img src="../assets/banner.png" style="height:200px;width:350px;">
+    <img src="../assets/banner.jpg" style="height:200px;width:350px;">
     <h2 style="color:black;">Business Process</h2>
       <h3>Flying Monkey Shipping (FMS) mampu menempatkan strategi perusahaan pada posisi yang terbaik serta melakukan pelayanan maksimal dan terjangkau bagi masyarakat luas. Kami melayani negeri dengan memberikan pelayanan terbaik bagi para pelanggan sebagai tamu kami yang terhormat.</h3>
   </div>
